fix: More image alignment on mobile device

--- a/styles.css
+++ b/styles.css
@@ -289,9 +289,8 @@ html, body {
 }
 
 .app__landingPage-banner_image img {
-    position: relative;
-    max-width: 568px;
-    max-height: 330px;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
     z-index: 1;
 }
@@ -496,9 +495,34 @@ input[type="text"]{
         gap: 24px;
         align-items: center;
     }
+
     .app__landingPage-featured_grid {
-        grid-gap: 16px 15px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-auto-flow: column;
     }
+    #square-image {
+        background: #000000 url('./assets/images/featured/ps5.png') no-repeat right bottom/contain;
+        grid-column: 1;
+        grid-row: 1;
+        justify-content: end;
+        padding: 24px;
+    }
+    #large-image {
+        justify-content: end;
+        align-items: start;
+        grid-row: 2;
+        grid-column: 1;
+        padding: 24px;
+    }
+    #small-image-right {
+        background: #000000 url('./assets/images/featured/gucci.png') no-repeat right bottom/contain;
+    }
+    #small-image-left {
+        background: #000000 url('./assets/images/featured/amazon-echo.png') no-repeat right bottom/contain;
+    }
+    
 }
 
 @media (max-width: 1218px) {
